--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "cross-env": "^7.0.2",
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "rollup": "^2.15.0",
     "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-serve": "^1.0.1",
-    "rollup": "^2.15.0"
+    "rollup-plugin-serve": "^1.0.1"
   },
   "devDependencies": {},
   "scripts": {
-  
     "build:dev": "rollup -c",
     "serve": "rollup -c -w"
   },
